@@ -6,5 +6,5 @@
 
 /* Version number. */
 #define OPJ_VERSION_MAJOR 2
-#define OPJ_VERSION_MINOR 2
-#define OPJ_VERSION_BUILD 0
+#define OPJ_VERSION_MINOR 3
+#define OPJ_VERSION_BUILD 1
