@@ -1,7 +1,7 @@
 /* create opj_config_private.h for CMake */
 #define OPJ_HAVE_INTTYPES_H 	1
 
-#define OPJ_PACKAGE_VERSION "2.2.0"
+#define OPJ_PACKAGE_VERSION "2.3.1"
 
 /* Not used by openjp2*/
 /*#define HAVE_MEMORY_H 1*/
